sd/sdge/guiao0/store/lock/20230214T113741.208Z/node-logs/n0.log
  File "/home/miguel/uni/4ano/sd/sdge/guiao0/wrong-lock.py", line 11
    match msg.body.type:
          ^
SyntaxError: invalid syntax
